# aliexpress

./: .dockerignore  .gitignore  Cargo.toml  dockerfile  makefile  readme  sample_config.json
.cargo/: config.toml
asset/: _layout.html  _prospect_products_by.html  _top_categories_by.html  _top_products_by.html  _top_stores_by.html  distribution.html  index.html  timeline.html
src/: category_puller.rs  category_service.rs  config.rs  data_puller.rs  database.rs  javascript.rs  lib.rs  main.rs  product_puller.rs  product_service.rs  progress.rs  provider.rs  result.rs  scraper_extension.rs  store_puller.rs  store_service.rs  task_tracker.rs
src/aliexpress_provider/: formatter.rs  mod.rs  product_puller.rs  store.rs  virtual_user.rs
src/aliexpress_provider/category/: mod.rs
src/aliexpress_provider/category/test/: mod.rs
src/aliexpress_provider/category/test/data/: category_page.html  level_3_page.html
src/aliexpress_provider/tests/: mod.rs  product_page_puller.rs  provider.rs  store.rs
src/aliexpress_provider/tests/data/: category_list_page.html  category_products.html  product_data.js  product_page.html  store_feedback_page.html
src/analyst/: aggregator.rs  formatter.rs  miner.rs  mod.rs  model.rs  reporter.rs
src/log/: mod.rs  tests.rs
src/tests/: javascript.rs
